[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Uley.gd" type="Script" id=1]
[ext_resource path="res://Sprites/World/ulei.png" type="Texture" id=2]
[ext_resource path="res://Sprites/UI/Uley/start_sbor.png" type="Texture" id=3]
[ext_resource path="res://Sprites/UI/Uley/soty.png" type="Texture" id=4]
[ext_resource path="res://vcrosdmonorusbyd.ttf" type="DynamicFontData" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16.0084, 7.40061 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12.9342, 18.671 )

[sub_resource type="DynamicFont" id=3]
size = 9
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="Uley" type="Area2D"]
visible = false
position = Vector2( 196, 362 )
scale = Vector2( 2.72, 2.72 )
script = ExtResource( 1 )

[node name="ulei" type="Sprite" parent="."]
position = Vector2( -0.258984, 0 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.978639, -11.4348 )
shape = SubResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -1.04056, 14.4816 )
shape = SubResource( 2 )
disabled = true

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 0.894118, 0.0941176, 0.0941176, 0 )
margin_left = -12.3867
margin_top = -62.4102
margin_right = 129.613
margin_bottom = -3.41018
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Panel"]
wait_time = 0.11

[node name="Button" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -43.5
margin_top = 5.68699
margin_right = 43.5
margin_bottom = 29.687
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 3 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="time_full_fill" type="Timer" parent="Panel"]
wait_time = 36.0
autostart = true

[node name="Full_med" type="TextureProgress" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.5
margin_top = -7.5935
margin_right = 30.5
margin_bottom = 2.40652
texture_progress = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sborbar" type="TextureProgress" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -89.3721
margin_top = 55.6675
margin_right = -28.3721
margin_bottom = 65.6675
texture_progress = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ostatok" type="Label" parent="Panel"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )
text = "Осталось "
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="." to="." method="_on_Uley_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Uley_body_exited"]
[connection signal="timeout" from="Panel/Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Panel/Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Panel/time_full_fill" to="." method="_on_time_full_fill_timeout"]
[connection signal="value_changed" from="Panel/Sborbar" to="." method="_on_Sborbar_value_changed"]
